--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang=''>
+<html>
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Python Updating Assignment</title>
     <style>
-        body {background-color:yellow}
-        h1 {color:green}
+        body {
+            background-color:yellow;
+            border:1px solid black;
+            margin:30px;
+        }
+	    h1 {
+	        color:blue;
+	        font-family:verdana;
+	    }
+    </style
 </head>
-<div id="includedContent"></div>
 <body>
     <h1>Heading</h1>
 </body>
