--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Python Updating Assignment</title>
+    <title>Testing GitHub Pages</title>
     <style>
         body {
             background-color:yellow;
