--- a/index.html
+++ b/index.html
@@ -14,10 +14,13 @@
     </style
     <script>
     	$(function(){
-    		$(#included_content).load("./resources/styles/menu.html");
+    		$("#included_content").load("./resources/styles/menu.html");
     	});
     </script>
 </head>
+<div id="#included_content">
+	
+</div>
 <body>
     <center><h1>Heading</h1></center>
 </body>
