--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
     	});
     </script>
 </head>
-<div id="#included_content">
-	
-</div>
+<div id="included_content"></div>
 <body>
-    <center><h1>Heading</h1></center>
+    <center><h1>Santa's GitHub Pages</h1></center>
 </body>
 </html>
