--- a/misc/pythonupdating/index.html
+++ b/misc/pythonupdating/index.html
@@ -4,7 +4,7 @@
         <title>Updating Python to 3.4</title>
         <style>
             body {
-                background-color:yellow;
+                background-color:e5e500;
                 margin:30px;
             }
             h1 {
@@ -13,7 +13,6 @@
             }
         </style>
     </head>
-    <div id="included_content"></div>
     <body>
         <center><h1>Updating Python to 3.4</h1></center>
     </body>
