--- a/misc/pythonupdating/index.html
+++ b/misc/pythonupdating/index.html
@@ -4,7 +4,7 @@
         <title>Updating Python to 3.4</title>
         <style>
             body {
-                background-color:e5e500;
+                background-color:#e5e500;
                 margin:30px;
             }
             h1 {
