hopefully added an image correctly

--- a/misc/pythonupdating/index.html
+++ b/misc/pythonupdating/index.html
@@ -14,6 +14,8 @@
         </style>
     </head>
     <body>
-        <center><h1>Updating Python to 3.4</h1></center>
+        <center>
+            <img src="http://i.stack.imgur.com/jBli3.png">
+            <h1>Updating Python to 3.4</h1></center>
     </body>
 </html>
