--- a/misc/pythonupdating/index.html
+++ b/misc/pythonupdating/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <center>
-            <h1><img src="http://i.stack.imgur.com/jBli3.png">Updating Python to 3.4</h1></center>
+            <h1><img src="http://i.stack.imgur.com/jBli3.png"><br>Updating Python to 3.4</h1></center>
             <p>
                 Python 2 is very slowly (it's been 6 years since Python 3.0 was released) being replaced by Python 3 among script developers. Many communities shun those who still use the 2.x versions of Python, such as the ##python-friendly IRC (internet relay chat) channel on irc.freenode.net; their channel topic states that they will not help those using Python 2.x. The main thing that caused the confusion between whether to use 2.x or 3.x comes from Python 2 being developed for two years past Python 3's release; its final 2.7 release was in mid-2010 with a statement of extended support. The main two reasons you might want to use Python 3 over 2 are: better text string handling and more consistency in function use.
             </p>
