--- a/misc/pythonupdating/index.html
+++ b/misc/pythonupdating/index.html
@@ -11,6 +11,11 @@
                 color:blue;
                 font-family:verdana;
             }
+            .pv0 {
+                background: #fc0; 
+                padding: 20px;
+                border-radius: 10px;
+            }
         </style>
     </head>
     <body>
@@ -22,14 +27,10 @@
             <p>
                 Before beginning, you will want to check which version of Python is installed. To do this, enter 'python -V' in the Terminal or Command Prompt. The capital 'V' is important; if you use a lower-case 'v', it will install a .zip file importing module. If it states 3.x, you will not need to follow the rest of this guide. If not, continue.
             </p>
-            .pv0 {
-                background: #fc0; 
-                padding: 20px;
-                border-radius: 10px;
-            }
-            <div class="pv0"{
+
+            <div class="pv0">
                 python -V
-            }
+            </div>
             <p>
                 Download <a href="https://www.python.org/downloads/">Python 3.x</a> from the Python website and run the install wizard. Follow through the fairly intuitive wizard, reading license agreements and what-not if you please.
             </p>
